# landelver

./: .gitignore  CMakeLists.txt  CSTYLES.md  README.md
docs/: COMBAT.md  EDITOR.md  LUA_API.md
server/: charactersheet.json  server.py
table/: CMakeLists.txt  Makefile  character.h  component.h  condition.c  entdefs.h  event.c  event.h  lua_api.c  lua_api.h  lua_runtime.c  lua_runtime.h  main.c  server.c  server.h  status.c  status.h  token.c  token.h  vector.c  vector.h
table/resources/players/: boblin.json
table/scripts/: character.lua  common.lua  component.lua  entity.lua  landelver_api.lua  system.lua  token.lua  world.lua
web/: index.html
web/css/: app.css
web/js/: app.js  websocket.js
